Feature / Add UI for creation of new checking package (#44)
* catch platform error

* working on initializing GL project from UI

* cleanup

* working on user prompting

* working on user prompting

* added option selection

* added target language book selection, and GL selection

* added creation of project.

* cleanup

* update build script

* bump version

* Improvements to fixCSS and added unit tests.

* Improvements to fixCSS and added unit tests.

* Adding localization.

* Adding localization.

* Adding support for default string in translate.

* Fix to not download GLs from Door43-Catalog. Fix for when download Url is from different org. Cleanup default string in translate.  Fix for createNewOlCheck error reporting.

* Updated locales

---------

Co-authored-by: PhotoNomad0 <bruce.mclean@unfoldingword.org>

--- a/src/data/locales/Bengali, India-bn_IN.json
+++ b/src/data/locales/Bengali, India-bn_IN.json
@@ -1,27 +1,72 @@
 {
   "menu": {
-    "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
-    "verse_edit": "Verse edit",
-    "comments": "Comments",
-    "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "no_results": "কোনো ফলাফল নেই ",
+    "invalidated": "অবৈধ ",
+    "bookmarks": "বুকমার্ক ",
+    "selected": "নির্বাচিত ",
+    "no_selection": "কোনো নির্বাচন নেই ",
+    "verse_edit": "পদ সম্পাদন করা ",
+    "comments": "মন্তব্য সমূহ ",
+    "menu": "মেনু ",
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
-    "back_button": "Go Back",
-    "cancel_button": "Cancel",
+    "ok_button": "ওকে করুন ",
+    "back_button": "ফিরে যান ",
+    "cancel_button": "বাতিল করুন ",
     "reset_button": "Reset",
-    "save_button": "Save",
-    "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "save_button": "সংরক্ষণ করুন",
+    "next_button": "পরবর্তী",
+    "discard_changes": "পরিবর্তনগুলোকে বাতিল করুন ",
+    "close_button": "বন্ধ করুন ",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "আপনার প্রকল্পের মধ্যে পরিবর্তনগুলোকে সনাক্ত করা হয়েছে যেগুলো আপনার সমন্বয়সাধন গুলোর কয়েকটিকে অবৈধ করে দিয়েছে I এই পদগুলো রেফারেন্সের ঠিক পরে পার্শ্ববর্তী মেনুর মধ্যে একটি ভগ্ন শৃঙ্খলের আইকনকে প্রদর্শন করে I  ",
+  "invalid_verse_alignments_and_selections": "আপনার প্রকল্পের মধ্যে পরিবর্তনগুলোকে সনাক্ত করা হয়েছে যেগুলো আপনার সমন্বয়সাধন গুলোর কয়েকটিকে অবৈধ করে দিয়েছে I এই পদগুলো রেফারেন্সের ঠিক পরে পার্শ্ববর্তী মেনুর মধ্যে একটি ভগ্ন শৃঙ্খলের আইকনকে প্রদর্শন করে I  ",
+  "invalidation_checking": "পরীক্ষা করা হচ্ছে এই সম্পাদন সংরক্ষিত নির্বাচনগুলো এবং সমন্বয়সাধনগুলোর সাথে সংঘাত করছে কিনা...",
   "quote_invalid": "Invalid Original Language Quote for Check: '${quote}'",
   "nothing_to_select_description": "When selected, the check will be marked as complete. Use when the translation is correct but a selection cannot be made.",
   "selections_invalidated": "Some selections are no longer valid and are removed.",
