--- a/src/data/locales/Indonesian-id_ID.json
+++ b/src/data/locales/Indonesian-id_ID.json
@@ -8,7 +8,8 @@
     "verse_edit": "Edit Ayat",
     "comments": "Komentar",
     "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "grouping": "Atur Berdasarkan Referensi",
+    "select_locale": "Pilih lokal"
   },
   "buttons": {
     "ok_button": "Oke",
@@ -17,7 +18,51 @@
     "reset_button": "Atur ulang",
     "save_button": "Simpan",
     "next_button": "Berikutnya",
-    "discard_changes": "Membuang Perubahan"
+    "discard_changes": "Membuang Perubahan",
+    "close_button": "Tutup",
+    "yes_button": "YA",
+    "no_button": "Tidak"
+  },
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
   },
   "alignments_reset_wa_tool": "Perubahan telah terdeteksi di proyek Anda yang telah membuat sebagian penyelarasan Anda menjadi tidak valid.\nAyat-ayat ini menampilkan ikon rantai rusak di sebelah referensi di menu samping.",
   "invalid_verse_alignments_and_selections": "Perubahan telah terdeteksi di proyek Anda yang telah membatalkan beberapa pilihan dan beberapa penyelarasan. Ayat-ayat ini menampilkan ikon rantai rusak di sebelah referensi di menu samping.",
@@ -61,8 +106,8 @@
   "can_skip": "Jika anda tidak dapat melakukan pemeriksaan ini, anda dapat ${span} melewati itu ${span} dan kembali ke nanti.",
   "skip": "Lewati",
   "click_show_expanded": "Klik untuk menampilkan panel ayat yang diperluas",
-  "expand_verses": "Perluas ayat",
-  "pre_release": "Pre-release",
+  "expand_verses": "Perluas Ayat",
+  "pre_release": "Pra-Rilis",
   "icons": {
     "selections_found": "Pilihan ditemukan untuk pemeriksaan ini",
     "no_selections_found": "Tidak Ada Pilihan ditemukan untuk pemeriksaan ini",
@@ -131,9 +176,9 @@
   "verb": "Kata Kerja",
   "transitive": "Transisi",
   "intransitive": "Intransitif",
-  "any": "Any",
-  "extraneous": "Extraneous",
-  "substantive_adjective": "Substantive Adjective",
+  "any": "Setiap",
+  "extraneous": "Asing",
+  "substantive_adjective": "Kata Sifat Substantif",
   "linking": "Menghubungkan",
   "modal": "Modal",
   "periphrastic": "Periprastik",
