--- a/src/data/locales/Kannada-kn_IN.json
+++ b/src/data/locales/Kannada-kn_IN.json
@@ -8,20 +8,65 @@
     "verse_edit": "ವಚನದ ತಿದ್ದುಪಡಿ",
     "comments": "ವ್ಯಾಖ್ಯೆಗಳು",
     "menu": "ಪರಿವಿಡಿ",
-    "grouping": "Organize by Reference"
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
+    "ok_button": "ಸರಿ",
     "back_button": "ಹಿಂದಕ್ಕೆ ಹೋಗು",
     "cancel_button": "ರದ್ದು ಮಾಡು",
     "reset_button": "Reset",
     "save_button": "ಉಳಿಸು",
     "next_button": "ಮುಂದಿನ",
-    "discard_changes": "ಬದಲಾವಣೆಗಳನ್ನು ತ್ಯಜಿಸಿ"
+    "discard_changes": "ಬದಲಾವಣೆಗಳನ್ನು ತ್ಯಜಿಸಿ",
+    "close_button": "ಮುಚ್ಚಿರಿ",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "ನಿಮ್ಮ ಜೋಡಣೆಗಳಲ್ಲಿನ ಅಮಾನ್ಯವಾಗಿರುವ ಕೆಲವೊಂದನ್ನು ನಿಮ್ಮ ಯೋಜನೆಯಲ್ಲಿ ಬದಲಾವಣೆಗಳನ್ನು ಪತ್ತೆಮಾಡಲಾಗಿದೆ. ಈ ವಚನಗಳು ಪಕ್ಕದ ಪರಿವಿಡಿಯಲ್ಲಿನ ಅನುಬಂಧದ ನಂತರ ಮುರಿದ ಸರಪಳಿಯ ಚಿಹ್ನೆಯನ್ನು ತೋರಿಸುತ್ತವೆ. ",
+  "invalid_verse_alignments_and_selections": "ಉಪಯೋಗವಿಲ್ಲದ ಕೆಲವೊಂದು ಆಯ್ಕೆಗಳ ಮತ್ತು ಕೆಲವೊಂದು ಜೋಡಣೆಗಳ ತಿದ್ದುಪಡಿಗಳು ನಿಮ್ಮ ಯೋಜನೆಯಲ್ಲಿ ಕಂಡುಬಂದಿವೆ. ಈ ವಚನಗಳು ಪಕ್ಕದ ಪರಿವಿಡಿಯಲ್ಲಿರುವ ಅನುಬಂಧಕ್ಕೆ ಸಂಬಂಧಪಟ್ಟು ಮುರಿದ ಸರಪಳಿಯ ಸಂಕೇತವನ್ನು ತೋರಿಸುತ್ತವೆ.",
+  "invalidation_checking": "ಈ ತಿದ್ದುಪಡಿ ಉಳಿಸಿದ ಆಯ್ಕೆಗಳು ಮತ್ತು ಸಾಲು ಹೊಂದಿಕೆಯೊಂದಿಗೆ ಒಪ್ಪುವುದಿಲ್ಲವೇನೋ ಎಂದು ಪರಿಶೀಲಿಸುತ್ತಿದೆ...",
   "quote_invalid": "ಪರಿಶೀಲನೆಗಾಗಿ ಅಮಾನ್ಯ ಮೂಲ ಭಾಷಾ ಉಲ್ಲೇಖ:'${quote}'",
   "nothing_to_select_description": "ಆಯ್ಕೆ ಮಾಡಿದಾಗ, ಪರಿಶೀಲನೆ ಸಂಪೂರ್ಣವಾಗಿದೆ ಎಂದು ಗುರುತುಹಾಕಲ್ಪಡುತ್ತದೆ. ಅನುವಾದ ಸರಿಯಾಗಿದ್ದಾಗ ಬಳಸಿ ಆದರೆ ಆಯ್ಕೆ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ.",
   "selections_invalidated": "ಕೆಲವು ಆಯ್ಕೆಗಳು ಇನ್ನು ಮುಂದೆ ಮಾನ್ಯವಾಗಿಲ್ಲ ಮತ್ತು ಅವುಗಳನ್ನು ತೆಗೆದುಹಾಕಲಾಗುತ್ತದೆ.",
@@ -88,7 +133,7 @@
     "gateway_language": "ಉಪಯೋಗಿಸಲ್ಪಡುವ ಭಾಷೆ",
     "target_language": "ಆಕಾಂಕ್ಷಿತ ಭಾಷೆ",
     "original_language": "ಮೂಲ ಭಾಷೆ",
-    "select_font_label": "Select Font"
+    "select_font_label": "ಲಿಪಿ ಆಯ್ದುಕೊಳ್ಳಿ"
   },
   "lemma": "ಪೂರ್ವಪಕ್ಷ:",
   "morphology": "ರೋಪವಿಜ್ಞಾನ:",
