--- a/src/data/locales/Malayalam-ml_IN.json
+++ b/src/data/locales/Malayalam-ml_IN.json
@@ -1,62 +1,107 @@
 {
   "menu": {
-    "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
-    "verse_edit": "Verse edit",
-    "comments": "Comments",
-    "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "no_results": "ഫലങ്ങളൊന്നുമില്ല\n",
+    "invalidated": "അസാധുവാണ്\n",
+    "bookmarks": "ബുക്ക്മാർക്കുകൾ",
+    "selected": "തിരഞ്ഞെടുത്ത",
+    "no_selection": "തിരഞ്ഞെടുക്കലൊന്നുമില്ല\n",
+    "verse_edit": "വാക്യം എഡിറ്റ് ചെയ്യുക\n",
+    "comments": "അഭിപ്രായങ്ങൾ",
+    "menu": "പട്ടിക",
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
-    "back_button": "Go Back",
-    "cancel_button": "Cancel",
+    "ok_button": "ഓക്കേ",
+    "back_button": "മടങ്ങിപ്പോവുക",
+    "cancel_button": "റദ്ദ്ചെയ്യുക",
     "reset_button": "Reset",
-    "save_button": "Save",
+    "save_button": "സേവ് ചെയ്യുക",
     "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "discard_changes": "Discard Changes",
+    "close_button": "അടയ്ക്കുക",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "നിങ്ങളുടെ പ്രോജക്റ്റിൽ മാറ്റങ്ങൾ കണ്ടെത്തി, അത് നിങ്ങളുടെ ചില വിന്യാസങ്ങൾ അസാധുവാക്കി.\nസൈഡ് മെനുവിലെ റഫറൻസിന് അടുത്തായി ഒരു തകർന്ന ശൃംഖലയുടെ ഐക്കൺ ഈ വാക്യങ്ങൾ പ്രദർശിപ്പിക്കുന്നു.\n",
+  "invalid_verse_alignments_and_selections": "നിങ്ങളുടെ പ്രോജക്റ്റിൽ ചില തിരഞ്ഞെടുക്കലുകളും ചില വിന്യാസങ്ങളും അസാധുവാക്കിയ മാറ്റങ്ങൾ കണ്ടെത്തി. ഈ വാക്യങ്ങൾ എന്‍റെ വശത്തുള്ള റഫറൻസിന് അടുത്തായി ഒരു തകർന്ന ശൃംഖലയുടെ ഐക്കൺ പ്രദർശിപ്പിക്കുന്നു\n",
+  "invalidation_checking": "ഈ എഡിറ്റ് സംരക്ഷിച്ച തിരഞ്ഞെടുക്കലുകളും വിന്യാസങ്ങളുമായി പൊരുത്തപ്പെടുന്നില്ലോ എന്ന് പരിശോധിക്കുന്നു ...\n",
   "quote_invalid": "Invalid Original Language Quote for Check: '${quote}'",
   "nothing_to_select_description": "When selected, the check will be marked as complete. Use when the translation is correct but a selection cannot be made.",
-  "selections_invalidated": "Some selections are no longer valid and are removed.",
-  "see_more": "See more",
-  "select": "Select",
-  "step2_check": "Step 2. Check",
-  "comment": "Comment",
-  "edit_verse": "Edit Verse",
-  "save_previous": "Save & Previous",
-  "save_continue": "Save & Continue",
+  "selections_invalidated": "ചില തിരഞ്ഞെടുക്കലുകൾ മേലിൽ സാധുവല്ല, അവ നീക്കംചെയ്യപ്പെടും.\n",
+  "see_more": "കൂടുതൽ കാണുക",
+  "select": "തിരഞ്ഞെടുക്കുക",
+  "step2_check": "സ്റ്റെപ് 2. പരിശോധിക്കുക",
+  "comment": "അഭിപ്രായം",
+  "edit_verse": "വാക്യം എഡിറ്റുചെയ്യുക\n",
+  "save_previous": "സംരക്ഷിക്കുക & മുമ്പത്തേത്\n",
+  "save_continue": "സംരക്ഷിച്ച് തുടരുക\n",
   "empty_verse": "No selection can be made because the verse is blank.<br/>You may fix this by editing the verse.<br/>If desired, you may also leave a comment or bookmark this check.",
-  "no_selection": "No selection has been made.<br/>Click the Select button, then select the translation for this check.",
+  "no_selection": "ഒരു തിരഞ്ഞെടുപ്പും നടത്തിയിട്ടില്ല. തിരഞ്ഞെടുക്കുക ബട്ടൺ ക്ലിക്കുചെയ്യുക, തുടർന്ന് ഈ ചെക്കിനായി വിവർത്തനം തിരഞ്ഞെടുക്കുക.\n",
   "no_selection_needed_description": "No selection has been made.<br/>This check has been marked as:",
   "no_selection_needed": "No selection needed",
-  "please_select": "Please select the translation for:",
+  "please_select": "ഇതിനായി വിവർത്തനം തിരഞ്ഞെടുക്കുക:\n",
   "selection_invalidated": "The selection for this check was invalidated.",
   "invalidated_tooltip": "A selection is invalidated if the words selected were then edited.",
-  "translated_as": "has been translated as:",
-  "bookmark": "Bookmark",
-  "cancel": "Cancel",
-  "clear_selection": "Clear Selection",
-  "save": "Save",
-  "spelling": "Spelling",
-  "punctuation": "Punctuation",
-  "word_choice": "Word Choice",
-  "meaning": "Meaning",
-  "grammar": "Grammar",
-  "other": "Other",
-  "select_reasons": "Select reason(s) for change",
+  "translated_as": "എന്ന്‍ വിവർത്തനം ചെയ്‌തു\n",
+  "bookmark": "ബുക്ക്മാർക്ക്",
+  "cancel": "റദ്ദ്ചെയ്യുക",
+  "clear_selection": "തിരഞ്ഞെടുപ്പ് മായ്‌ക്കുക\n",
+  "save": "സേവ് ചെയ്യുക",
+  "spelling": "സ്പെല്ലിംഗ്",
+  "punctuation": "ചിഹ്നനം",
+  "word_choice": "വേഡ് ചോയ്സ്\n",
+  "meaning": "അർത്ഥം",
+  "grammar": "വ്യാകരണം",
+  "other": "മറ്റുള്ളവ",
+  "select_reasons": "അടുത്തതായി, മാറ്റത്തിനുള്ള കാരണം (കൾ) തിരഞ്ഞെടുക്കുക\n",
   "edit_verse_title": "Edit Verse - ${passage}",
-  "next_change_reason": "Next, select reason(s) for change",
-  "first_make_change": "First, make changes to verse above",
-  "close": "Close",
+  "next_change_reason": "അടുത്തതായി, മാറ്റത്തിനുള്ള കാരണം (കൾ) തിരഞ്ഞെടുക്കുക\n",
+  "first_make_change": "ആദ്യം, മുകളിലുള്ള വാക്യത്തിൽ മാറ്റങ്ങൾ വരുത്തുക\n",
+  "close": "അവസാനിപ്പിക്കുക",
   "load": "Load",
-  "attention": "Attention:",
+  "attention": "ശ്രദ്ധിക്കുക",
   "select_translation": "Please ${span} select ${span} the correct translation for your current check.",
   "can_skip": "If you are unable to perform this check, you may ${span} skip it ${span} and come back to it later.",
   "skip": "Skip",
@@ -76,9 +121,9 @@
   "select_too_many": "Click a previous selection to remove it before adding a new one. To select more than ${maximum} words, highlight phrases instead of individual words.",
   "oops": "Oops!",
   "pane": {
-    "current_project": "Current project",
-    "missing_verse_warning": "[WARNING: This Bible version does not include text for this reference.]",
-    "title": "Step 1. Read",
+    "current_project": "നിലവിലെ പ്രോജക്റ്റ്",
+    "missing_verse_warning": "മുന്നറിയിപ്പ്: ഈ ബൈബിൾ പതിപ്പിൽ ഈ റഫറൻസിനുള്ള വാചകം ഉൾപ്പെടുന്നില്ല.\n",
+    "title": "സ്റ്റെപ് 1. വായിക്കുക",
     "expand_hover": "Click to show expanded resource panes",
     "remove_resource": "Click to remove resource",
     "remove_resource_label": "Remove resource",
@@ -86,21 +131,21 @@
     "add_resource_label": "Add Resources",
     "select_language": "Select language",
     "gateway_language": "Gateway Language",
-    "target_language": "Target Language",
+    "target_language": "ലക്ഷ്യ ഭാഷ",
     "original_language": "Original Language",
-    "select_font_label": "Select Font"
+    "select_font_label": "ഫോണ്ട് തിരഞ്ഞെടുക്കുക"
   },
-  "lemma": "Lemma:",
-  "morphology": "Morphology:",
-  "strongs": "Strongs:",
-  "lexicon": "Lexicon:",
+  "lemma": "ലെമ്മ",
+  "morphology": "പദഘടന",
+  "strongs": "ശക്തികൾ\n",
+  "lexicon": "നിഘണ്ടു\n",
   "noun": "Noun",
   "substantive_adj": "Substantive adj.",
   "predicate_adj": "Predicate adj.",
-  "nominative": "Nominative",
+  "nominative": "കര്‍ത്തൃവിഭക്തി",
   "genitive": "Genitive",
   "dative": "Dative",
-  "accusative": "Accusative",
+  "accusative": "കര്‍മ്മവിഭക്തി",
   "vocative": "Vocative",
   "masculine": "Masculine",
   "feminine": "Feminine",
@@ -116,14 +161,14 @@
   "differential": "Differential",
   "possessive": "Possessive",
   "quantifier": "Quantifier",
-  "number": "Number",
+  "number": "നമ്പറുകൾ",
   "ordinal": "Ordinal",
   "relative": "Relative",
-  "interrogative": "Interrogative",
+  "interrogative": "ചോദ്യരൂപം",
   "first": "1st",
   "second": "2nd",
   "third": "3rd",
-  "pronoun": "Pronoun",
+  "pronoun": "സർവ്വനാമം",
   "personal": "Personal",
   "reflexive": "Reflexive",
   "reciprocal": "Reciprocal",
