--- a/src/data/locales/Naga Pidgin-nag_IN.json
+++ b/src/data/locales/Naga Pidgin-nag_IN.json
@@ -1,62 +1,107 @@
 {
   "menu": {
     "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
-    "verse_edit": "Verse edit",
-    "comments": "Comments",
+    "invalidated": "Inkaar kuri diya",
+    "bookmarks": "Bookmark khan",
+    "selected": "Chunise",
+    "no_selection": "Ekubi chuniya nai",
+    "verse_edit": "Verse sudharya",
+    "comments": "Mantabya",
     "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "grouping": "Organize by Reference",
+    "select_locale": "Select Locale"
   },
   "buttons": {
-    "ok_button": "OK",
-    "back_button": "Go Back",
+    "ok_button": "Ok",
+    "back_button": "Wapas jabi",
     "cancel_button": "Cancel",
     "reset_button": "Reset",
-    "save_button": "Save",
+    "save_button": "Bachabi",
     "next_button": "Next",
-    "discard_changes": "Bodli kurakhanke chari dibi"
+    "discard_changes": "Bodli kurakhanke chari dibi",
+    "close_button": "Bondo kuribi",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "Aapni laga project te badlawa kuri diya hoise aru itu khanke aapni laga sangrekhan te milai diya hoise. Itu verse khan sandarbha laga kinarte ekta bhangiya sikol laga icon te dikhai dibo.",
+  "invalid_verse_alignments_and_selections": "Aapni laga project te badlawa huwa paise ju khanke aapni laga kunba sangrekhan te milai diya hoise. Itu verse khan kinar laga menu te sandarbha laga pichete ekta bhangiya sikol laga icon te dikhai dibo.",
+  "invalidation_checking": "Bachaikena rakha milaikena rakha khan logote itu sudhar tu sangharsa kure na nakure check kuri ashe...",
   "quote_invalid": "Praman kuribole thik nohua ashol bhasa laga khisa: '${quote}'",
   "nothing_to_select_description": "Jetiya chuni lobo, chuni lowa khanke sampurna huwa mani lobo. Jetiya bhasa bodli kura tu thik ashe tetiya he itu chunibi kintu ene chunibole naparibo.",
   "selections_invalidated": "Kunuba chunibole lagiya khantu etiya thik nohua hoise itu karne utukhan ke hatai diya hoise.",
-  "see_more": "See more",
-  "select": "Select",
-  "step2_check": "Step 2. Check",
-  "comment": "Comment",
-  "edit_verse": "Edit Verse",
-  "save_previous": "Save & Previous",
-  "save_continue": "Save & Continue",
+  "see_more": "Besi sabi",
+  "select": "Chunibi",
+  "step2_check": "Kadam 2. Check kuribi",
+  "comment": "Mantabya kobi",
+  "edit_verse": "Verse sudharibi",
+  "save_previous": "Agelaga bachabi",
+  "save_continue": "Bachaikena jari kuribi",
   "empty_verse": "No selection can be made because the verse is blank.<br/>You may fix this by editing the verse.<br/>If desired, you may also leave a comment or bookmark this check.",
-  "no_selection": "No selection has been made.<br/>Click the Select button, then select the translation for this check.",
+  "no_selection": "Ekubi chuniya nai. Click kurikena button chunibi, aru anubad tu chunibi.",
   "no_selection_needed_description": "Ekubi chuniya huwa nai.<br/>Itu chuniya tu enika ashe:",
   "no_selection_needed": "Eku chunibole nalage",
-  "please_select": "Please select the translation for:",
+  "please_select": "Karne anubaad te chunibi: ",
   "selection_invalidated": "The selection for this check was invalidated.",
   "invalidated_tooltip": "A selection is invalidated if the words selected were then edited.",
-  "translated_as": "has been translated as:",
+  "translated_as": "Hisabte anubaad kura hoise",
   "bookmark": "Bookmark",
   "cancel": "Cancel",
-  "clear_selection": "Clear Selection",
-  "save": "Save",
-  "spelling": "Spelling",
+  "clear_selection": "Chuniya tu safa kuribi",
+  "save": "Bachabi",
+  "spelling": "Banaan",
   "punctuation": "Punctuation",
-  "word_choice": "Word Choice",
-  "meaning": "Meaning",
-  "grammar": "Grammar",
-  "other": "Other",
+  "word_choice": "itcha Sabda",
+  "meaning": "Matlab",
+  "grammar": "Byakaran",
+  "other": "Dusra",
   "select_reasons": "Select reason(s) for change",
   "edit_verse_title": "Edit Verse - ${passage}",
-  "next_change_reason": "Next, select reason(s) for change",
-  "first_make_change": "First, make changes to verse above",
-  "close": "Close",
+  "next_change_reason": "Nexte, badlawa karne karon (khan) chunibi",
+  "first_make_change": "Firste, uporte thaka verse khan badlawa kuribi",
+  "close": "Bondo kuribi",
   "load": "Load",
-  "attention": "Attention:",
+  "attention": "Dhyan dibi",
   "select_translation": "Please ${span} select ${span} the correct translation for your current check.",
   "can_skip": "If you are unable to perform this check, you may ${span} skip it ${span} and come back to it later.",
   "skip": "Skip",
@@ -76,9 +121,9 @@
   "select_too_many": "Nautun halibole karne agete chuniya tu click kuribi. Arubi ${maximum} pora bishi kotha khan chunibole karne, nijor bekti kotha khan nohoikena ashol kotha khan he.",
   "oops": "Oops!",
   "pane": {
-    "current_project": "Current project",
-    "missing_verse_warning": "[WARNING: This Bible version does not include text for this reference.]",
-    "title": "Step 1. Read",
+    "current_project": "Etiya hal te kuribole kaam",
+    "missing_verse_warning": "CHETAWNI: itu ullekh kora tu itu Bible anubaad te nai.",
+    "title": "Kadam 1. Poribi",
     "expand_hover": "Click to show expanded resource panes",
     "remove_resource": "Click to remove resource",
     "remove_resource_label": "Remove resource",
@@ -91,8 +136,8 @@
     "select_font_label": "Select Font"
   },
   "lemma": "Lemma:",
-  "morphology": "Morphology:",
-  "strongs": "Strongs:",
+  "morphology": "Bhasa laga bigyan",
+  "strongs": "Gambhir khan",
   "lexicon": "Lexicon:",
   "noun": "Noun",
   "substantive_adj": "Substantive adj.",
