--- a/src/data/locales/Telugu-te_IN.json
+++ b/src/data/locales/Telugu-te_IN.json
@@ -1,62 +1,107 @@
 {
   "menu": {
-    "no_results": "No results",
-    "invalidated": "Invalidated",
-    "bookmarks": "Bookmarks",
-    "selected": "Selected",
-    "no_selection": "No selection",
-    "verse_edit": "Verse edit",
-    "comments": "Comments",
-    "menu": "Menu",
-    "grouping": "Organize by Reference"
+    "no_results": "ఫలితాలు లేవు",
+    "invalidated": "చెల్లుబాటుకాలేదు",
+    "bookmarks": "బుక్ మార్కులు",
+    "selected": "ఎంపిక చెయ్యబడింది",
+    "no_selection": "ఎంపిక లేదు",
+    "verse_edit": "వచనాన్ని సరిచెయ్యండి",
+    "comments": "వ్యాఖ్యలు",
+    "menu": "సమాచారం",
+    "grouping": "Organize by Reference",
+    "select_locale": "లొకేల్ ఎంచుకోండి"
   },
   "buttons": {
-    "ok_button": "OK",
-    "back_button": "Go Back",
-    "cancel_button": "Cancel",
-    "reset_button": "Reset",
-    "save_button": "Save",
+    "ok_button": "సరే",
+    "back_button": "వెనక్కు వెళ్ళండి",
+    "cancel_button": "రద్దు చెయ్యండి",
+    "reset_button": "రీసెట్ చేయండి",
+    "save_button": "భద్రపరచండి",
     "next_button": "Next",
-    "discard_changes": "Discard Changes"
+    "discard_changes": "Discard Changes",
+    "close_button": "ముగింపు",
+    "yes_button": "YES",
+    "no_button": "NO"
   },
-  "alignments_reset_wa_tool": "Changes have been detected in your project which have invalidated some of your alignments.\nThese verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalid_verse_alignments_and_selections": "Changes have been detected in your project which have invalidated some selections and some alignments. These verses display an icon of a broken chain next to the reference in the side menu.",
-  "invalidation_checking": "Checking if this edit conflicts with saved selections and alignments...",
+  "prompts": {
+    "createNewOlCheck": "Create new Checking Project",
+    "downloadCatalog": "Do you wish to download the current catalog?",
+    "selectTargetLanguage": "Select the Target Language:",
+    "selectOrganization": "Select the Target Organization:",
+    "selectTargetBible": "Select the Target Bible:",
+    "selectTargetBook": "Select the Target Book:",
+    "selectGatewayLanguage": "Select the Gateway Checking Language:",
+    "selectGatewayOwner": "Select the Gateway Checking Language Organization:"
+  },
+  "status": {
+    "downloadingCatalog": "Downloading current catalog",
+    "catalogDownloadError": "Error Downloading Updated Resource Catalog!",
+    "creatingCheckingProject": "Creating Checking Project",
+    "noLanguage": "No Target Language selected!",
+    "languageSelected": "Target Language selected ${targetLanguagePick}",
+    "noOwner": "No Target Owner selected!",
+    "ownerSelected": "Target Bible selected ${targetOwnerPick}",
+    "noBible": "No Target Bible selected!",
+    "bibleSelected": "Target Bible selected ${targetBibleIdPick}",
+    "noBook": "No Target Book selected!",
+    "bookSelected": "Target Book selected ${targetBookPick}",
+    "noCheckingLanguage": "No Gateway Checking Language selected!",
+    "glSelected": "Gateway Checking Language selected  ${gwLanguagePick}",
+    "noGlOwner": "No Gateway Checking Language Organization selected!",
+    "glOwnerSelected": "Gateway Checking Language Organization selected  ${gwOwnerPick}",
+    "creatingProject": "Creating Checking Project",
+    "glResourceDownloadError": "Error Downloading Gateway Language resources!",
+    "downloadingTargetBible": "Downloading Target Bible ${targetBible}",
+    "targetBibleDownloadError": "Error Downloading Target Bible!",
+    "errorCreatingProject": "Failed to Create Checking Project",
+    "errorCreatingProjectTitle": "Error Creating Checking Project:",
+    "successCreatingProject": "Successfully initialized project at ${repoPath}",
+    "successCreatingProjectTitle": "Success Creating Checking Project:",
+    "checkingInstructions": "You can now do checking by opening translationWords checks in `checking/twl` or translationNotes checks in `checking/tn`",
+    "resourceMissing": "Checking resources missing.",
+    "bibleMissing": "Target bible missing for ${bookId}.",
+    "invalidCheckingFile": "Empty checks file: ${checksPath}",
+    "uploadError": "${message}.  Repo is at ${url}",
+    "uploadSuccess": "Upload Success to ${url}"
+  },
+  "alignments_reset_wa_tool": "మీ ప్రాజెక్టులో మార్పులు కనుగొనబడ్డాయి, ఇవి మీ అమరికలలో కొన్నింటినీ చెల్లుబాటు చెయ్యలేదు, ఈ వచనాలు ఒక చిహ్నాన్ని కనుపరుస్తున్నాయి, ప్రక్కన ఉన్న సమాచారంలోని సూచన వైపు తెగిపోయిన గొలుసు గుర్తు.",
+  "invalid_verse_alignments_and_selections": "మీ ప్రాజెక్టులో మార్పులు కనుగొనబడ్డాయి, ఇవి మీ అమరికలలో కొన్నింటినీ చెల్లుబాటు చెయ్యలేదు, ఈ వచనాలు ఒక చిహ్నాన్ని కనుపరుస్తున్నాయి, ప్రక్కన ఉన్న సమాచారంలోని సూచన వైపు తెగిపోయిన గొలుసు గుర్తు.",
+  "invalidation_checking": "ఈ సవరణ భద్రపరచిన ఎంపికలు, అమరికలతో విభేదిస్తున్నట్లయితే తనిఖీ చేస్తుంది",
   "quote_invalid": "Invalid Original Language Quote for Check: '${quote}'",
   "nothing_to_select_description": "When selected, the check will be marked as complete. Use when the translation is correct but a selection cannot be made.",
-  "selections_invalidated": "Some selections are no longer valid and are removed.",
-  "see_more": "See more",
-  "select": "Select",
-  "step2_check": "Step 2. Check",
-  "comment": "Comment",
-  "edit_verse": "Edit Verse",
-  "save_previous": "Save & Previous",
-  "save_continue": "Save & Continue",
+  "selections_invalidated": "కొన్ని ఎంపికలు ఇకమీదట సరియైనవిగా లేవు, అవి తొలగించబడ్డాయి",
+  "see_more": "మరింత చూడండి",
+  "select": "ఎంపిక చెయ్యండి",
+  "step2_check": "అడుగు 2, తనిఖీ చెయ్యండి",
+  "comment": "వ్యాఖ్యానించండి",
+  "edit_verse": "వచనాన్ని సరిచెయ్యండి",
+  "save_previous": "భద్రపరచండి, ముందున్నది",
+  "save_continue": "భద్రపరచండి, కొనసాగండి",
   "empty_verse": "No selection can be made because the verse is blank.<br/>You may fix this by editing the verse.<br/>If desired, you may also leave a comment or bookmark this check.",
-  "no_selection": "No selection has been made.<br/>Click the Select button, then select the translation for this check.",
+  "no_selection": "ఎటువంటి ఎంపిక జరగలేదు. ఎంపిక బటన్ తట్టండి, తరువాత ఈ తనిఖీ కోసం అనువాదాన్ని ఎంపిక చెయ్యండి",
   "no_selection_needed_description": "No selection has been made.<br/>This check has been marked as:",
   "no_selection_needed": "No selection needed",
-  "please_select": "Please select the translation for:",
+  "please_select": "దయచేసి అనువాదాన్ని ఎంపిక చెయ్యండి:",
   "selection_invalidated": "The selection for this check was invalidated.",
   "invalidated_tooltip": "A selection is invalidated if the words selected were then edited.",
-  "translated_as": "has been translated as:",
-  "bookmark": "Bookmark",
-  "cancel": "Cancel",
-  "clear_selection": "Clear Selection",
-  "save": "Save",
-  "spelling": "Spelling",
-  "punctuation": "Punctuation",
-  "word_choice": "Word Choice",
-  "meaning": "Meaning",
-  "grammar": "Grammar",
-  "other": "Other",
+  "translated_as": "ఈ విధంగా అనువదించండి",
+  "bookmark": "బుక్ మార్క్",
+  "cancel": "రద్దు చెయ్యండి",
+  "clear_selection": "ఎంపికను తొలగించండి",
+  "save": "భద్రపరచండి",
+  "spelling": "అక్షరక్రమం",
+  "punctuation": "విరామ చిహ్నం",
+  "word_choice": "పద ఎంపిక",
+  "meaning": "అర్థం",
+  "grammar": "వ్యాకరణం",
+  "other": "ఇతరములు",
   "select_reasons": "Select reason(s) for change",
   "edit_verse_title": "Edit Verse - ${passage}",
-  "next_change_reason": "Next, select reason(s) for change",
-  "first_make_change": "First, make changes to verse above",
-  "close": "Close",
+  "next_change_reason": "తరువాత, మార్పుకు కారణాలు ఎంపిక చెయ్యండి",
+  "first_make_change": "మొదట పైనున్న వచనంలో మార్పులు చెయ్యండి",
+  "close": "ముగింపు",
   "load": "Load",
-  "attention": "Attention:",
+  "attention": "గమనిక",
   "select_translation": "Please ${span} select ${span} the correct translation for your current check.",
   "can_skip": "If you are unable to perform this check, you may ${span} skip it ${span} and come back to it later.",
   "skip": "Skip",
@@ -76,31 +121,31 @@
   "select_too_many": "Click a previous selection to remove it before adding a new one. To select more than ${maximum} words, highlight phrases instead of individual words.",
   "oops": "Oops!",
   "pane": {
-    "current_project": "Current project",
-    "missing_verse_warning": "[WARNING: This Bible version does not include text for this reference.]",
-    "title": "Step 1. Read",
+    "current_project": "ప్రస్తుత పథకం",
+    "missing_verse_warning": "హెచ్చరిక: ఈ బైబిలు అనువాదంలో ఈ సూచన కోసం వచన భాగం లేదు",
+    "title": "అడుగు 1. చదవండి",
     "expand_hover": "Click to show expanded resource panes",
     "remove_resource": "Click to remove resource",
     "remove_resource_label": "Remove resource",
     "add_resource": "Click to add a resource",
     "add_resource_label": "Add Resources",
     "select_language": "Select language",
-    "gateway_language": "Gateway Language",
-    "target_language": "Target Language",
+    "gateway_language": "గేట్ వే భాష",
+    "target_language": "లక్ష్య భాష",
     "original_language": "Original Language",
     "select_font_label": "Select Font"
   },
-  "lemma": "Lemma:",
-  "morphology": "Morphology:",
-  "strongs": "Strongs:",
-  "lexicon": "Lexicon:",
+  "lemma": "ఉపప్రతిజ్ఞ",
+  "morphology": "పదనిర్మాణశాస్త్రం",
+  "strongs": "స్ట్రాంగ్స్",
+  "lexicon": "నిఘంటువు",
   "noun": "Noun",
   "substantive_adj": "Substantive adj.",
   "predicate_adj": "Predicate adj.",
-  "nominative": "Nominative",
+  "nominative": " ప్రథమా విభక్తి ",
   "genitive": "Genitive",
   "dative": "Dative",
-  "accusative": "Accusative",
+  "accusative": "ద్వితీయా విభక్తి",
   "vocative": "Vocative",
   "masculine": "Masculine",
   "feminine": "Feminine",
@@ -116,13 +161,13 @@
   "differential": "Differential",
   "possessive": "Possessive",
   "quantifier": "Quantifier",
-  "number": "Number",
-  "ordinal": "Ordinal",
-  "relative": "Relative",
+  "number": "సంఖ్యలు",
+  "ordinal": "క్రమమును తెలిపే",
+  "relative": "బంధువు",
   "interrogative": "Interrogative",
-  "first": "1st",
-  "second": "2nd",
-  "third": "3rd",
+  "first": "1వ",
+  "second": "2వ",
+  "third": "3వ",
   "pronoun": "Pronoun",
   "personal": "Personal",
   "reflexive": "Reflexive",
