--- a/src/data/locales/Spanish-es_ES.json
+++ b/src/data/locales/Spanish-es_ES.json
@@ -19,7 +19,50 @@
     "save_button": "Guardar",
     "next_button": "Siguiente",
     "discard_changes": "Descartar cambios",
-    "close_button": "Cerrar"
+    "close_button": "Cerrar",
+    "yes_button": "SI",
+    "no_button": "NO"
+  },
+  "prompts": {
+    "createNewOlCheck": "Crear un nuevo proyecto de verificación",
+    "downloadCatalog": "¿Desea descargar el catálogo actual?",
+    "selectTargetLanguage": "Seleccione el idioma de destino:",
+    "selectOrganization": "Seleccione la organización de destino:",
+    "selectTargetBible": "Seleccione la Biblia de Destino:",
+    "selectTargetBook": "Seleccione el libro de destino:",
+    "selectGatewayLanguage": "Seleccione el idioma de verificación de Gateway:",
+    "selectGatewayOwner": "Seleccione la Organización de Idiomas de Comprobación de Gateway:"
+  },
+  "status": {
+    "downloadingCatalog": "Descargando el catálogo actual",
+    "catalogDownloadError": "¡Error al descargar el catálogo de recursos actualizado!",
+    "creatingCheckingProject": "Creando proyecto de verificación",
+    "noLanguage": "¡Idioma de destino seleccionado!",
+    "languageSelected": "Idioma de destino seleccionado ${targetLanguagePick}",
+    "noOwner": "Ningún Propietario seleccionado!",
+    "ownerSelected": "Biblia objetivo seleccionada ${targetOwnerPick}",
+    "noBible": "¡Idioma de destino seleccionado!",
+    "bibleSelected": "Biblia objetivo seleccionada ${targetBibleIdPick}",
+    "noBook": "¡No hay Libro de Destino seleccionado!",
+    "bookSelected": "Libro seleccionado ${targetBookPick}",
+    "noCheckingLanguage": "Ningún idioma de verificación de Gateway seleccionado!",
+    "glSelected": "Comprobación del idioma de la puerta de enlace seleccionado  ${gwLanguagePick}",
+    "noGlOwner": "¡No se ha seleccionado ninguna organización de idioma de la pasarela seleccionada!",
+    "glOwnerSelected": "Organización de idioma de la puerta de enlace seleccionada  ${gwOwnerPick}",
+    "creatingProject": "Creando proyecto de verificación",
+    "glResourceDownloadError": "¡Error al descargar recursos de idioma de Gateway!",
+    "downloadingTargetBible": "Descargando la Biblia objetivo ${targetBible}",
+    "targetBibleDownloadError": "¡Error al descargar la Biblia de Destino!",
+    "errorCreatingProject": "Error al crear el proyecto de verificación",
+    "errorCreatingProjectTitle": "Error al crear proyecto de verificación:",
+    "successCreatingProject": "Proyecto iniciado con éxito en ${repoPath}",
+    "successCreatingProjectTitle": "Éxito al crear proyecto de verificación:",
+    "checkingInstructions": "Ahora puedes hacer comprobaciones abriendo las comprobaciones de translationWords en `checking/twl` o las comprobaciones de translationNotes en `checking/tn`",
+    "resourceMissing": "Falta la comprobación de recursos.",
+    "bibleMissing": "Falta la Biblia objetivo para ${bookId}.",
+    "invalidCheckingFile": "Archivo de comprobaciones vacío: ${checksPath}",
+    "uploadError": "${message}. Repo está en ${url}",
+    "uploadSuccess": "Subir Éxito a ${url}"
   },
   "alignments_reset_wa_tool": "Se han detectado cambios en su proyecto que han invalidado algunas de sus alineaciones. Estos versículos tienen un ícono de una cadena rota junto a la referencia en el menú lateral.",
   "invalid_verse_alignments_and_selections": "Se han detectado cambios en su proyecto que han invalidado algunas selecciones y algunas alineaciones. Estos versículos tienen un ícono de una cadena rota junto a la referencia en el menú lateral.",
@@ -75,7 +118,7 @@
     "bookmarked": "Esta verificación ha sido marcada para revisión",
     "not_bookmarked": "Esta verificación no ha sido marcada para revisión"
   },
-  "select_too_many": "Haz clic en una selección previa para eliminarla antes de añadir una nueva. Para seleccionar más de 4 palabras, resalta las frases en lugar de palabras individuales.",
+  "select_too_many": "Haz clic en una selección previa para eliminarla antes de añadir una nueva. Para seleccionar más de ${maximum} palabras, resalta las frases en lugar de palabras individuales.",
   "oops": "¡Uy!",
   "pane": {
     "current_project": "Proyecto actual",
@@ -133,9 +176,9 @@
   "verb": "Verbo",
   "transitive": "Transitivo",
   "intransitive": "Intransitivo",
-  "any": "Any",
-  "extraneous": "Extraneous",
-  "substantive_adjective": "Substantive Adjective",
+  "any": "Cualquier",
+  "extraneous": "Extranjero",
+  "substantive_adjective": "Adjetivo substantivo",
   "linking": "Enlace",
   "modal": "Modal",
   "periphrastic": "Perifrástico",
